syntax = "proto3";
// Generated Webezy proto EDIT from CLI / Make manual edits here and run 'webezy build --manual'

import "protos/Health.proto";





// [webezy] - Service description None
service HealthCheck {
	// [webezy] - Check IN:domain.Health.v1.HealthCheckRequest | OUT:domain.Health.v1.HealthCheckResponse
	rpc Check(domain.Health.v1.HealthCheckRequest) returns (domain.Health.v1.HealthCheckResponse);
}

